feat: create sign up with firebase

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -1,4 +1,7 @@
 {
+  "authPage": {
+    "textButtonLogin": "Log in using Google" 
+  },
   "clientsPage": {
     "title": "Clients",
     "numberClinetsBlock": "All",
